# privacy-contract-compiler

./: README.md  plang_README.txt
lib/ExecutionEngine/RuntimeDyld/: RTDyldMemoryManager.cpp
lib/Transforms/IPO/: .PassManagerBuilder.cpp.swp
tools/PlatON-jit/: CMakeLists.txt  LLVMBuild.txt  OrcLazyJIT.cpp  jit.cpp  jit.def  jit.h
tools/clang/tools/: CMakeLists.txt
tools/clang/tools/plang/: AddProtobufEntry.cpp  CMakeLists.txt  GenJavaCode.cpp  GenMPCC.cpp  InitType.cpp  Option.h  PassIR.cpp  gencode.cpp  gencode.h  parseArgs.cpp  plang.cpp
tools/clang/tools/plang/demangle/: CMakeLists.txt  Demangle.h  ItaniumDemangle.cpp  ItaniumDemangle.h  MicrosoftDemangle.cpp  MicrosoftDemangleNodes.cpp  MicrosoftDemangleNodes.h
tools/lli/: OrcLazyJIT.cpp  OrcLazyJIT.h
